Added assets and initial mechanic
-move forwards, steering , jump

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=CityParkEnvironmentCollec
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/CityPark/Maps/Showcase.Showcase
-GameDefaultMap=/Game/CityPark/Maps/Showcase.Showcase
+EditorStartupMap=/Game/Maps/BaseLevel.BaseLevel
+GameDefaultMap=/Game/Maps/BaseLevel.BaseLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Core/GM_SkateGame.GM_SkateGame_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
