--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Core/GM_SkateGame.GM_SkateGame_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Core/GI_SkateGame.GI_SkateGame_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
