Small Ajustment to player movement
-Fixed score not showing 0 at the beginning
-Fixed some hotkeys

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=CityParkEnvironmentCollec
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/BaseLevel.BaseLevel
-GameDefaultMap=/Game/Maps/BaseLevel.BaseLevel
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
