--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,1 +1,4 @@
+[/Script/DeveloperToolSettings.PlatformsMenuSettings]
+StagingDirectory=(Path="G:/Build")
+PerPlatformBuildConfig=(("Windows", PPBC_Development))
 
